[gd_scene format=3 uid="uid://c7ufcl6hmtxc2"]

[ext_resource type="Script" uid="uid://d1c0pqh1gn4xp" path="res://src/Level/Scripts/grind_rail.gd" id="1_8vy1r"]
[ext_resource type="PackedScene" uid="uid://bh5fxlg87xytk" path="res://res/models/grind_rail_ramp.glb" id="2_78evc"]

[sub_resource type="Curve3D" id="Curve3D_8vy1r"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -10),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="BoxMesh" id="BoxMesh_7wex1"]
size = Vector3(0.1, 0.5, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lrwgh"]
data = PackedVector3Array(-0.049999997, 0.25, 5, 0.049999997, 0.25, 5, -0.049999997, -0.25, 5, 0.049999997, 0.25, 5, 0.049999997, -0.25, 5, -0.049999997, -0.25, 5, 0.049999997, 0.25, -5, -0.049999997, 0.25, -5, 0.049999997, -0.25, -5, -0.049999997, 0.25, -5, -0.049999997, -0.25, -5, 0.049999997, -0.25, -5, 0.049999997, 0.25, 5, 0.049999997, 0.25, -5, 0.049999997, -0.25, 5, 0.049999997, 0.25, -5, 0.049999997, -0.25, -5, 0.049999997, -0.25, 5, -0.049999997, 0.25, -5, -0.049999997, 0.25, 5, -0.049999997, -0.25, -5, -0.049999997, 0.25, 5, -0.049999997, -0.25, 5, -0.049999997, -0.25, -5, 0.049999997, 0.25, 5, -0.049999997, 0.25, 5, 0.049999997, 0.25, -5, -0.049999997, 0.25, 5, -0.049999997, 0.25, -5, 0.049999997, 0.25, -5, -0.049999997, -0.25, 5, 0.049999997, -0.25, 5, -0.049999997, -0.25, -5, 0.049999997, -0.25, 5, 0.049999997, -0.25, -5, -0.049999997, -0.25, -5)

[sub_resource type="BoxShape3D" id="BoxShape3D_8vy1r"]
size = Vector3(0.4, 0.2, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_78evc"]
data = PackedVector3Array(0, 0, 0.049999997, 0, 0.5, -0.049999997, 0, 0.5, 0.049999997, 0, 0, 0.049999997, 0, 0, -0.049999997, 0, 0.5, -0.049999997, 0, 0, -0.049999997, 1, 0, -0.25, 0, 0.5, -0.049999997, 1, 0, 0.25, 0, 0, 0.049999997, 0, 0.5, 0.049999997, 1, 0, -0.25, 0, 0.5, 0.049999997, 0, 0.5, -0.049999997, 1, 0, -0.25, 1, 0, 0.25, 0, 0.5, 0.049999997)

[node name="GrindRail" type="Area3D" unique_id=226234324]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_8vy1r")

[node name="GrindRailPath" type="Path3D" parent="." unique_id=1037364310]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 5)
curve = SubResource("Curve3D_8vy1r")
debug_custom_color = Color(1, 0, 0, 1)

[node name="GrindRailPathFollow" type="PathFollow3D" parent="GrindRailPath" unique_id=1937811886]
transform = Transform3D(0.99999374, 0, 0, 0, 0.99999374, 0, 0, 0, 1, 0, 0.3, 0)
v_offset = 0.3
loop = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=1167586119]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("BoxMesh_7wex1")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D" unique_id=374495724]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D" unique_id=1825431777]
shape = SubResource("ConcavePolygonShape3D_lrwgh")

[node name="GrindRailAreaCollision" type="CollisionShape3D" parent="." unique_id=433892262]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("BoxShape3D_8vy1r")

[node name="grind_rail_ramp" parent="." unique_id=1592385671 instance=ExtResource("2_78evc")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 5)

[node name="StaticBody3D" type="StaticBody3D" parent="grind_rail_ramp/Cube" parent_id_path=PackedInt32Array(1592385671, 616507085) index="0" unique_id=1349215144]

[node name="CollisionShape3D" type="CollisionShape3D" parent="grind_rail_ramp/Cube/StaticBody3D" unique_id=1550484198]
shape = SubResource("ConcavePolygonShape3D_78evc")

[editable path="grind_rail_ramp"]
